--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,5 @@
 name: CI/CD with Terraform Docker
+
 on:
   push:
     branches:
@@ -24,7 +25,7 @@ jobs:
           terraform_wrapper: false
       - name: Terraform Init
         id: init
-        run: terraform init -backend-config="bucket=$TF_STATE_BUCKET_NAME" -backend-config="region-us-east-2"
+        run: terraform init -backend-config="bucket=$TF_STATE_BUCKET" -backend-config="region=us-east-2"
         working-directory: ./terraform
       - name: Terraform Plan
         id: plan
@@ -33,7 +34,7 @@ jobs:
           -var="region=us-east-2"\
           -var="public_key=$PUBLIC_SSH_KEY"\
           -var="private_key=$PRIVATE_SSH_KEY"\
-          -var="key_name=$KEY_NAME"\
+          -var="key_name=deployer-key"\
           -out=PLAN
         working-directory: ./terraform
       - name: Terraform Apply
