--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 env:
   AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
-  TF_STATE_BUCKET: ${{ secrets.AWS_TF_STATE_BUCKET_NAME}}
+  TF_STATE_BUCKET_NAME: ${{ secrets.AWS_TF_STATE_BUCKET_NAME}}
   PRIVATE_SSH_KEY: ${{ secrets.AWS_SSH_KEY_PRIVATE}}
   PUBLIC_SSH_KEY: ${{ secrets.AWS_SSH_KEY_PUBLIC}}
   AWS_REGION: us-east-2
@@ -25,11 +25,11 @@ jobs:
           terraform_wrapper: false
       - name: Terraform Init
         id: init
-        run: terraform init -backend-config="bucket=$TF_STATE_BUCKET" -backend-config="region=us-east-2"
+        run: terraform init -backend-config="bucket=$TF_STATE_BUCKET_NAME" -backend-config="region=us-east-2"
         working-directory: ./terraform
       - name: Terraform Plan
         id: plan
-        run: |-
+        run: 
           terraform plan \
           -var="region=us-east-2"\
           -var="public_key=$PUBLIC_SSH_KEY"\
