--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         working-directory: ./terraform
       - name: Terraform Plan
         id: plan
-        run: 
+        run: |-
           terraform plan \
           -var="region=us-east-2"\
           -var="public_key=$PUBLIC_SSH_KEY"\
