test secret key correctly import?

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,13 +29,17 @@ jobs:
         working-directory: ./terraform
       - name: Terraform Plan
         id: plan
-        run: |-
+        run: |
+          # Debug: print out the env variables
+          echo "PUBLIC_SSH_KEY: ${PUBLIC_SSH_KEY}"
+          echo "PRIVATE_SSH_KEY: ${PRIVATE_SSH_KEY}"
+          echo "KEY_NAME: ${KEY_NAME}"
           terraform plan \
-          -var="region=us-east-2"\
-          -var="public_key=$PUBLIC_SSH_KEY"\
-          -var="private_key=$PRIVATE_SSH_KEY"\
-          -var="key_name=deployer-key"\
-          -out=PLAN
+            -var="region=us-east-2" \
+            -var="public_key=${PUBLIC_SSH_KEY}" \
+            -var="private_key=${PRIVATE_SSH_KEY}" \
+            -var="key_name=${KEY_NAME}" \
+            -out=PLAN
         working-directory: ./terraform
       - name: Terraform Apply
         id: apply
