add KEY NAME to env

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,7 @@ env:
   PRIVATE_SSH_KEY: ${{ secrets.AWS_SSH_KEY_PRIVATE}}
   PUBLIC_SSH_KEY: ${{ secrets.AWS_SSH_KEY_PUBLIC}}
   AWS_REGION: us-east-2
+  KEY_NAME: deployer-key
 
 jobs:
   deploy-infra:
