--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Set Output
         id: set-ip
         run: |-
-          echo "::set-output name=instance_public_ip::${terraform output instance_public_ip}"
+          echo "::set-output name=instance_public_ip::$(terraform output instance_public_ip)"
   deploy-app:
     runs-on: ubuntu-latest
     needs: deploy-infra
