--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,8 +45,8 @@ jobs:
         working-directory: ./terraform
       - name: Set Output
         id: set-ip
-        run: |-
-          echo "instance_public_ip=$(terraform output -raw instance_public_ip)" >> $GITHUB_OUTPUT
+        run: echo "instance_public_ip=$(terraform output -raw instance_public_ip)" >> $GITHUB_OUTPUT
+        working-directory: ./terraform
   deploy-app:
     runs-on: ubuntu-latest
     needs: deploy-infra
