--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
         working-directory: ./terraform
       - name: Set Output
         id: set-ip
-        run: echo "instance_public_ip=$(terraform output -raw instance_public_ip)" >> $GITHUB_OUTPUT
+        run: echo "instance_public_ip=$(terraform output -raw instance_public_ip)" >> $GITHUB_ENV
         working-directory: ./terraform
   deploy-app:
     runs-on: ubuntu-latest
@@ -82,7 +82,11 @@ jobs:
           script: |-
             sudo apt update
             sudo apt install docker.io -y
-            sudo apt install awscli -y
+
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
+            
             sudo $(aws ecr get-login --no-include-email --region us-east-2);
             sudo docker stop myappcontainer || true
             sudo docker rm myappcontainer ||true
