--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -75,7 +75,7 @@ jobs:
           AWS_DEFAULT_REGION: us-east-2
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ env.SERVER_PUBLIC_IP}}
+          host: ${{ needs.deploy-infra.outputs.SERVER_PUBLIC_IP}}
           username: ubuntu
           key: ${{env.PRIVATE_SSH_KEY}}
           envs: PRIVATE_SSH_KEY, REGISTRY, REPOSITORY, IMAGE_TAG, AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_DEFAULT_REGION, AWS_REGION
