--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
         working-directory: ./terraform
       - name: Set Output
         id: set-ip
-        run: echo "instance_public_ip=$(terraform output -raw instance_public_ip)" >> $GITHUB_ENV
+        run: echo "instance_public_ip=$(terraform output -raw instance_public_ip)" >> $GITHUB_OUTPUT
         working-directory: ./terraform
   deploy-app:
     runs-on: ubuntu-latest
@@ -54,7 +54,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Set IP env variable
-        run: echo SERVER_PUBLIC_IP=${{needs.deploy-infra.outputs.SERVER_PUBLIC_IP}} >> $GITHUB_ENV
+        run: echo SERVER_PUBLIC_IP=${{needs.deploy-infra.outputs.SERVER_PUBLIC_IP}} >> $GITHUB_OUTPUT
       - name: Login to AWS ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
@@ -75,7 +75,7 @@ jobs:
           AWS_DEFAULT_REGION: us-east-2
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ needs.deploy-infra.outputs.SERVER_PUBLIC_IP}}
+          host: ${{ needs.deploy-infra.outputs.SERVER_PUBLIC_IP }}
           username: ubuntu
           key: ${{env.PRIVATE_SSH_KEY}}
           envs: PRIVATE_SSH_KEY, REGISTRY, REPOSITORY, IMAGE_TAG, AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_DEFAULT_REGION, AWS_REGION
@@ -83,25 +83,13 @@ jobs:
             sudo apt update
             sudo apt install docker.io -y
 
-            # Fix AWS CLI installation
-            sudo apt install unzip
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip -o awscliv2.zip
-            sudo ./aws/install --update
-
-            # Configure AWS credentials
-            mkdir -p ~/.aws
-            echo "[default]
-            aws_access_key_id=$AWS_ACCESS_KEY_ID
-            aws_secret_access_key=$AWS_SECRET_ACCESS_KEY
-            region=$AWS_DEFAULT_REGION" > ~/.aws/credentials
-
-            # Get ECR login token and login to Docker
-            aws ecr get-login-password --region $AWS_DEFAULT_REGION | sudo docker login --username AWS --password-stdin $REGISTRY
+            unzip awscliv2.zip
+            sudo ./aws/install
             
-            # Deploy container
+            sudo $(aws ecr get-login --no-include-email --region us-east-2);
             sudo docker stop myappcontainer || true
-            sudo docker rm myappcontainer || true
+            sudo docker rm myappcontainer ||true
             sudo docker pull $REGISTRY/$REPOSITORY:$IMAGE_TAG
             sudo docker run -d --name myappcontainer -p 80:9000 $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
