--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,11 +82,7 @@ jobs:
           script: |-
             sudo apt update
             sudo apt install docker.io -y
-
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            sudo ./aws/install
-            
+            sudo apt install awscli -y
             sudo $(aws ecr get-login --no-include-email --region us-east-2);
             sudo docker stop myappcontainer || true
             sudo docker rm myappcontainer ||true
